--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       crossorigin="anonymous"
       media="(max-width: 991px)"
     />-->
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/font.css" />
-    <link rel="stylesheet" href="./css/tablet.css" />
-    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/font.css" />
+    <link rel="stylesheet" href="css/tablet.css" />
+    <link rel="stylesheet" href="css/mobile.css" />
     <title>Assignment02</title>
   </head>
   <body>
@@ -396,3 +396,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
