--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <h2>Chứng chỉ - Giải thưởng</h2>
       <div class="Reward-con">
         <div class="Re-1 Re-5">
-          <img src="/images/Cert_DBI.png" />
+          <img src="images/Cert_DBI.png" />
           <div>
             <p class="Re-bye">CHỨNG CHỈ LẬP TRÌNH WEB - FUNIX</p>
             <p>- Chứng chỉ thuộc chương trình CCDV</p>
@@ -279,7 +279,7 @@
           </div>
         </div>
         <div class="Re-1 Re-5">
-          <img src="/images/Cert_PRF.png" class="Re-2-img" />
+          <img src="images/Cert_PRF.png" class="Re-2-img" />
           <div class="Re-4">
             <p class="Re-bye">CHỨNG CHỈ LẬP TRÌNH JAVASCRIPT - FUNIX</p>
             <p>- Chứng chỉ thuộc chương trình CCDV</p>
@@ -287,7 +287,7 @@
           </div>
         </div>
         <div class="Re-1 Re-3 Re-5">
-          <img src="/images/Cert_WEB.png" />
+          <img src="images/Cert_WEB.png" />
           <div>
             <p class="Re-bye">CHỨNG CHỈ THIẾT KẾ DATABASE - FUNIX</p>
             <p>- Chứng chỉ thuộc chương trình CCDV</p>
@@ -300,7 +300,7 @@
       <p class="Pro-title">Dự án</p>
       <div class="Pro-con">
         <div class="Pro-1">
-          <img src="/images/project_1.png " class="Pro-img-1" />
+          <img src="images/project_1.png " class="Pro-img-1" />
           <p class="Pro-p-1">CV CÁ NHÂN</p>
           <div class="Pro-triple">
             <p class="Triple-year El-1">2021</p>
@@ -326,7 +326,7 @@
           </div>
         </div>
         <div class="Pro-1">
-          <img src="/images/project_2.png " class="Pro-img-1" />
+          <img src="images/project_2.png " class="Pro-img-1" />
           <p class="Pro-p-1">TRANG WEB QUẢN LÝ THÚ CƯNG</p>
           <div class="Pro-triple">
             <p class="Triple-year El-1">2021</p>
@@ -353,7 +353,7 @@
           </div>
         </div>
         <div class="Pro-1">
-          <img src="/images/project_3.png" class="Pro-img-1" />
+          <img src="images/project_3.png" class="Pro-img-1" />
           <p class="Pro-p-1">TRANG WEB XEM TIN TỨC</p>
           <div class="Pro-triple">
             <p class="Triple-year El-1">2021</p>
@@ -396,4 +396,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
